--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -83,7 +83,7 @@ layout: default
     <!-- Teaching -->
     {% if page.teaching %}
       <h2>
-        <a" style="color: inherit">Teaching</a>
+        <a style="color: inherit">Teaching</a>
       </h2>
       {% include teaching.liquid %}
     {% endif %}
