--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -80,12 +80,12 @@ layout: default
       {% include internships.liquid %}
     {% endif %}
 
-    <!-- Teaching -->
-    {% if page.teaching %}
+    <!-- Services -->
+    {% if page.services %}
       <h2>
-        <a style="color: inherit">Teaching</a>
+        <a style="color: inherit">Services</a>
       </h2>
-      {% include teaching.liquid %}
+      {% include services.liquid %}
     {% endif %}
 
     <!-- Social -->
