--- a/_includes/services.liquid
+++ b/_includes/services.liquid
@@ -1,9 +1,9 @@
-<div class="teaching">
-  {% if site.teaching != blank %}
+<div class="services">
+  {% if site.services != blank %}
     <div class="table-responsive">
       <table class="table table-sm table-borderless">
-        {% assign teaching = site.teaching | reverse %}
-        {% for item in teaching %}
+        {% assign services = site.services | reverse %}
+        {% for item in services %}
           <tr>
             <th scope="row" style="width: 20%">{{ item.semester }}</th>
             <td>
@@ -14,6 +14,6 @@
       </table>
     </div>
   {% else %}
-    <p>No teaching so far...</p>
+    <p>No services so far...</p>
   {% endif %}
 </div>
